--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Zhuoli's Homepage"
 description              : "PhD Candidate @ Purdue IE "
-repository               : "ZhuoliYin/zhuoliy.github.io"
+repository               : "ZhuoliYin/zhuoliyin.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
