--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,10 @@ main:
 
   - title: "Publications"
     url: "/#-publications"
-
+    
+  - title: "Internships"
+    url: "/#-internships"
+    
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
@@ -18,5 +21,5 @@ main:
   - title: "Invited Talks"
     url: "/#-invited-talks"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "new"       # <--- add new tab
+    url: "/fun/"
