--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Selected Awards"
     url: "/#-selected-awards"
     
-  - title: "Teaching"
+  - title: "teaching"
     url: "/teaching/"
 
   - title: "Mentorship"
