--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,10 @@ main:
 
   - title: "News"
     url: "/#-news"
-
+    
+  - title: "Research"
+    url: "/research/"
+    
   - title: "Publications"
     url: "/#-publications"
     
