--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Zhuoli Yin"
-description              : "PhD Candidate @ Purdue IE "
+description              : "Ph.D. Candidate in Industrial Engineering at Purdue University"
 repository               : "ZhuoliYin/zhuoliyin.github.io"
 google_scholar_stats_use_cdn : true
 
